# emergenze-pcge

./: .gitignore  Dockerfile  Makefile  README.md  __init__.py  api.py  civico.py  common.py  comunicazione.py  controllers.py  dev.Dockerfile  docker-compose-dev.yml  docker-compose.yml  evento.py  incarico.py  listener.py  mire.py  requirements.txt  segnalazione.py  settings.py  squadra.py  tools.py  verbatel.py  wso2.py  wso2test.py
Emergenze-Verbatel/: .gitignore  civico.py  controllers.py  docker-compose-light-dev.yml  docker-compose.yml  settings.py  verbatel.py
aggiornamento_DB/: postgis_update.py
backend/: .gitignore  Makefile  README.md  __init__.py  common.py  dev.Dockerfile  docker-compose-dev.yml  docker-compose.yml  evento.py  listener.py  mire.py  wso2test.py
chiamate/: controllers.py  populate.py  tools.py
conda_envs/: base.yml  conferma_lettura.yml  conferma_lettura_requirements.txt  dbupdate.yml  dbupdate_requirements.txt  readxml.yml  readxml_requirements.txt
incarico/: __init__.py  comunicazione.py  incarico.py
models/: __init__.py  chiamate.py  evento.py  generic.py  mire.py  segnalazione.py  segnalazione_decodifica.py  tools.py  users.py  users_decodifica.py  validators.py
pages/: add_componente_coc.php  add_volontario.php  add_volontario2.php  attivita_sala_emergenze.php  check_evento.php  (+56 more)
telegram/emergenze/: project.toml  pyproject.toml
telegram/emergenze/src/emergenze/: common.py  settings.py
telegram/emergenze/src/emergenze/emergenze/: bot.py  common.py  settings.py
telegram/emergenze/src/emergenze/emergenze/botlib/: tools.py
(+126 files in other folders)
