[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mybot"
version = "0.0.1"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "My Telegram bot"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiogram == 2.25.1",
    "psycopg2-binary",
    "python-dotenv",
    "emoji",
    # ...
]

# [project.urls]
# "Homepage" = "https://github.com/pypa/sampleproject"
# "Bug Tracker" = "https://github.com/pypa/sampleproject/issues"

# [project.scripts]
# run-emergenze-botgram = "mybot.bot:run"
# run-emergenze-coc-botgram = "mybot.bot:run"